Theme Application Fix

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Peace of Mind",
     "version": "1.0.1",
     "description": "Removes clutter from Discord to keep you at peace. Use CTRL + ALT + [ to enter zen mode.",
-    "author": "Nevulo",
+    "author": "KryskZ09",
     "license": "MIT"
   }
   
